create.php en css aanpassing

--- a/css/main.css
+++ b/css/main.css
@@ -400,3 +400,25 @@ body {
 .task-card a:hover {
     text-decoration: underline;
 }
+
+.form {
+    background-color: lightgray;
+    padding: 2rem 2.5rem;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    margin: 0 auto;
+}
+
+.form a {
+  text-decoration: none;
+  color: black;
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.container a:hover{
+  color: blue;
+  font-size: 16px;
+}
