--- a/css/main.css
+++ b/css/main.css
@@ -631,3 +631,6 @@ body h2 + ul li a:hover {
   display: flex;
   justify-content: space-evenly;
 }
+a:hover{
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.336);
+}
